try to fix show talent on mobile

--- a/app/assets/stylesheets/pages/_talent.scss
+++ b/app/assets/stylesheets/pages/_talent.scss
@@ -254,7 +254,7 @@ section.talent {
             }
             &:nth-child(4) {
               top: 350px !important;
-              left: 230px !important;
+              right: 5px !important;
             }
           }
           & .social-links > a i {
